# John

./: .env.example  .gitignore  .rgignore  README.md  electrobun.config.ts  package-lock.json  package.json  run.sh  start-backend.sh
John/: .john.env.example  AppDelegate.swift
John.xcodeproj/: project.pbxproj
John/John/: JohnApp.swift
John/John.xcodeproj/: project.pbxproj
John/Models/: AgentStatus.swift  AppConfiguration.swift  CalendarModel.swift  EventModel.swift  Message.swift  Notifications.swift
John/Notch/: NotchWindow.swift
John/Panel/: AgentPanel.swift
John/Resources/: Info.plist  John.entitlements
John/Services/: AgentHarness.swift  BackendClient.swift  CalendarManager.swift  CalendarService.swift  EnvManager.swift  GlobalHotkeyManager.swift  KeychainManager.swift  MusicPlayerService.swift  VoiceService.swift
John/Views/: CalendarView.swift  ChatView.swift  MessageBubble.swift  MusicPlayerView.swift  MusicVisualizerView.swift  NotchPillContent.swift  PanelContentView.swift  SettingsView.swift
app/: .env.example  README.md  index.html  package-lock.json  package.json
app/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
app/src-tauri/agent/: deep_agent.py  requirements.txt
app/src-tauri/src/: audio.rs  main.rs  wake_phrase.rs
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/agent/: __init__.py  graph.py  prompts.py  tools.py
backend/app/memory/: __init__.py  conversation.py  vectorstore.py
backend/app/middleware/: rate_limit.py
backend/app/routers/: __init__.py  agent.py  websocket.py
backend/tests/: conftest.py  test_agent.py  test_api.py
scripts/: patch-plist.sh
(+24 files in other folders)
